Changed to steal

--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>toolbar</title>
         
-        <link type="text/css" href="../../css/ui-lightness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+        <link type="text/css" href="jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 		<style>
 			.ui-menu {
 				margin: 0px; padding: 0px;
@@ -71,7 +71,7 @@
             </ul>
         </div>
 		<script type='text/javascript' 
-                src='../../jmvc/include.js?include[app]=jupiter/toolbar&include[env]=development'
+                src='../../steal/include.js?include[app]=phui/toolbar&include[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
