--- a/navigation/navigation.html
+++ b/navigation/navigation.html
@@ -140,7 +140,7 @@
 			</div>
 		</div>
 		<script type='text/javascript' 
-                src='../../jmvc/include.js?include[app]=jupiter/navigation&include[env]=development'
+                src='../../steal/include.js?include[app]=phui/navigation&include[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
