--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -71,7 +71,7 @@
             </ul>
         </div>
 		<script type='text/javascript' 
-                src='../../steal/include.js?include[app]=phui/toolbar&include[env]=development'
+                src='../../steal/steal.js?steal[app]=phui/toolbar&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
