--- a/positionable/positionable.html
+++ b/positionable/positionable.html
@@ -17,7 +17,7 @@
             <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
         </ul>
 		<script type='text/javascript' 
-                src='../../jmvc/include.js?include[app]=jupiter/positionable&include[env]=development'
+                src='../../steal/steal.js?steal[app]=jupiter/positionable&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
