Forgot to make it phui

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -80,8 +80,8 @@
                 compress='false'>   
         </script>
         <script type='text/javascript'>
-            $("#menu1").jupiter_menu();
-            $("#menu2").jupiter_ui_menu().trigger("show", {top: 40, left: 300});
+            $("#menu1").phui_menu();
+            $("#menu2").phui_ui_menu().trigger("show", {top: 40, left: 300});
         </script>
 	</body>
 </html>
