--- a/navigation/navigation.html
+++ b/navigation/navigation.html
@@ -145,7 +145,7 @@
                 compress='false'>   
         </script>
         <script type='text/javascript'>
-            $("#nav").mixin( Jupiter.Navigation  )
+            $("#nav").mixin( Phui.Navigation  )
         </script>
 	</body>
 </html>
