--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -76,11 +76,11 @@
                 compress='false'>   
         </script>
         <script type='text/javascript'>
-            var J = Jupiter;
+            var J = Phui;
 			
 			//J.Toolbar( J.Menu(J.Positionable)  ).extend("My.Toolbar")
 			
-			$("#toolbar").jupiter_ui_toolbar();  
+			$("#toolbar").phui_ui_toolbar();  
         </script>
 	</body>
 </html>
