Adding a tabs to phui

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -75,7 +75,7 @@
         </ul>
         
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=jupiter/menu&steal[env]=development'
+                src='../../steal/steal.js?steal[app]=phui/menu&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
