--- a/filler/filler.html
+++ b/filler/filler.html
@@ -2,24 +2,33 @@
             "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 	<head>
-		<title>splitter</title>
+		<title>filler</title>
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
+			body {
+				margin : 0px;
+				padding: 0px;
+			}
+			#header, #content, #footer{
+				border: solid 1px green;
+				height: 100px;
+			}
         </style>
 	</head>
 	<body>
-	    <h1>Welcome to JavaScriptMVC 3.0!</h1>
-        <ul>
-            <li>Include plugins and files in <i>phui/splitter/splitter.js</i>.</li>
-            <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
-        </ul>
+	    <div id='header'><h1>Header</h1></div>
+		<div id='content'><h1>Content</h1></div>
+		<div id='footer'><h1>Footer</h1></div>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=phui/splitter&steal[env]=development'
+                src='../../steal/steal.js?steal[app]=phui/filler&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
+		<script type='text/javascript'>
+			$("#content").phui_filler()
+		</script>
 	</body>
 </html>
