--- a/widget/editable/editable.html
+++ b/widget/editable/editable.html
@@ -2,7 +2,7 @@
             "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 	<head>
-		<title>widget</title>
+		<title>editable</title>
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
@@ -11,15 +11,14 @@
         </style>
 	</head>
 	<body>
-	    <h1>Welcome to JavaScriptMVC 3.0!</h1>
-        <ul>
-            <li>Include plugins and files in <i>phui/widget/widget.js</i>.</li>
-            <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
-        </ul>
+	    <div id='content'></div>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=phui/widget&steal[env]=development'
+                src='../../../steal/steal.js?steal[app]=phui/widget/editable&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
+		<script type='text/javascript'>
+			$("#content").html( ""+  Phui.Widget.Editable.view({value: 5}) ).hookupView();
+		</script>
 	</body>
 </html>
