--- a/widget/show/show.html
+++ b/widget/show/show.html
@@ -2,7 +2,7 @@
             "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 	<head>
-		<title>widget</title>
+		<title>show</title>
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
@@ -11,14 +11,15 @@
         </style>
 	</head>
 	<body>
-	    <div id='content'></div>
+	    <h1>Welcome to JavaScriptMVC 3.0!</h1>
+        <ul>
+            <li>Include plugins and files in <i>phui/widget/show/show.js</i>.</li>
+            <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
+        </ul>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=phui/widget&steal[env]=development'
+                src='../../../steal/steal.js?steal[app]=phui/widget/show&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
-		<script type='text/javascript'>
-			$('#content').html("//phui/widget/test/test.ejs",{},{},true)
-		</script>
 	</body>
 </html>
