--- a/navigation/navigation.html
+++ b/navigation/navigation.html
@@ -45,7 +45,7 @@
 			.selected {
 				color: #943030;
 			}
-			.deslected,  .deslected a{
+			.deselected,  .deselected a{
 				color: #a0a0ee;
 			}
 			#nav {
