--- a/resizable/resizable.html
+++ b/resizable/resizable.html
@@ -22,6 +22,7 @@
 				right:-5px;
 				top:0;
 				width:7px;
+				
 			}
 			.ui-resizable-se {
 				bottom:1px;
@@ -29,7 +30,8 @@
 				height:12px;
 				right:1px;
 				width:12px;
-				background-color: gray;
+				background-color: #ddddff;
+				
 			}
 			.ui-resizable-handle {
 				display:block;
