--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<title>menu</title>
-        <link type="text/css" href="../../css/ui-lightness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+        <link type="text/css" href="../smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
