Some styling changes to the widgets and tabs.

--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>toolbar</title>
         
-        <link type="text/css" href="../jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+		<link type="text/css" href="../smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 		<style>
 			.ui-menu {
 				margin: 0px; padding: 0px;
