--- a/widget/group_editable.html
+++ b/widget/group_editable.html
@@ -11,15 +11,19 @@
         </style>
 	</head>
 	<body>
-	    <h1>Welcome to JavaScriptMVC 3.0!</h1>
-        <ul>
-            <li>Include plugins and files in <i>phui/widget/group_editable/group_editable.js</i>.</li>
-            <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
-        </ul>
+	    <div id='content'></div>
 		<script type='text/javascript' 
-                src='../../../steal/steal.js?steal[app]=phui/widget/group_editable&steal[env]=development'
+                src='../../steal/steal.js'
                 package='main.js'
                 compress='false'>   
         </script>
+		<script type='text/javascript'>
+			steal.plugins('phui/widget/group_editable','phui/widget/editable').then(function(){
+				$("#content").html("//phui/widget/group_editable/example/view.ejs",{} ).hookupView();
+				
+			})
+			steal.start();
+			
+		</script>
 	</body>
 </html>
