--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -59,19 +59,19 @@
 		<h2>UI Tab</h2>
 		<div id="uitabs">
 		    <ul>
-		        <li><a href="#fragment-1"><span>One</span></a></li>
-		        <li><a href="#fragment-2"><span>Two</span></a></li>
-		        <li><a href="#fragment-3"><span>Three</span></a></li>
+		        <li><a><span>One</span></a></li>
+		        <li><a><span>Two</span></a></li>
+		        <li><a><span>Three</span></a></li>
 		    </ul>
-		    <div id="fragment-1">
+		    <div>
 		        <p>First tab is active by default:</p>
 		        <pre><code>$('#example').tabs();</code></pre>
 		    </div>
-		    <div id="fragment-2">
+		    <div>
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		    </div>
-		    <div id="fragment-3">
+		    <div>
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
