Datatable search feature.

--- a/datatable/datatable.html
+++ b/datatable/datatable.html
@@ -21,9 +21,16 @@
 				background-color: white;
 			}
 			.phui_datatable table th {
+				text-align: left;
 				border-width: 1px;
 				border-style: solid;
 				padding: 7px;
+			}
+			.phui_datatable table th input {
+				width: 200px;
+				height: 20px;
+				border: 2px solid #CCCCCC;
+				margin-left: 10px;
 			}
 			.phui_datatable table td {
 				border-width: 1px;
