--- a/datatable/datatable.html
+++ b/datatable/datatable.html
@@ -45,7 +45,7 @@
             <li>Include plugins and files in <i>phui/datatable/datatable.js</i>.</li>
             <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
         </ul>
-        <div class="loans"></div>
+        <div class="loans" style="margin:20px;"></div>
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/datatable&steal[env]=development'
                 package='main.js'
