--- a/grid.html
+++ b/grid.html
@@ -28,7 +28,7 @@
 							"phui/filler",
 							"jquery/model",
 							"jquery/dom/fixtures").then(function($){
-				$.fixture["-make"](["resources","resource"],Math.round(Math.random()*2000)+1,function(num){
+				$.fixture["-make"](["resources","resource"],50,function(num){
 					return {
 						id		:	num,
 						name : "Resource "+num,
