--- a/filler/filler2.html
+++ b/filler/filler2.html
@@ -38,7 +38,8 @@
 		<a href='javascript://' id='clear'>clear</a>
 	</div>
 	<table class="footer">
-	<tbody><tr>
+	<tbody>
+		<tr>
 		<td class="pagelisting"><label>Page 1 of 1 (50 records)</label></td>
 		<td class="gridpages phui_paginator_page"><div class="toolbar_button first_record ">
 	First
@@ -67,7 +68,8 @@
 			</form>
 		</td>
 	</tr>
-</tbody></table>
+</tbody>
+</table>
 </div>
 		
 		
