--- a/splitter/splitter.html
+++ b/splitter/splitter.html
@@ -8,10 +8,11 @@
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
-			#container  {
+			#container, #container2 {
 				border: solid 1px;
 				width: 300px;
 				height: 400px;
+				margin: 10px;
 			}
 			.hsplitter {
 				height: 3px;
@@ -28,10 +29,12 @@
 			.split {
 				overflow: auto;
 			}
-			#container .panel:nth-child(even) {
+			#container .panel:nth-child(even),
+			#container2 .panel:nth-child(even) {
 				background-color: #ddddee;
 			}
-			#container .panel:nth-child(odd) {
+			#container .panel:nth-child(odd),
+			#container2 .panel:nth-child(odd) {
 				background-color: #eedddd;
 			}
         </style>
@@ -41,25 +44,43 @@
 	    	<div class='panel'>
 	    		<a href='javsacript://' class='remove'>remove</a>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	    	</div>
 			<div class='panel'>
-	    		<a href='javsacript://' class='remove'>remove</a>
+	    		<a href='javsacript://' class='remove'>remove</a>				
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 	    	</div>
 	    </div>
 		<a href='javascript://' id="add">add</a>
 		<a href='javascript://' id="resize">resize</a>
+		
+	    <div id='container2'>
+	    	<div class='panel' style="border:1px solid #CCCCCC;padding:5px;margin:5px;height:80px;">
+	    		<a href='javsacript://' class='remove'>remove</a>
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	    	</div>
+			<div class='panel' style="border:1px solid #CCCCCC;padding:5px;margin:5px;">
+	    		<a href='javsacript://' class='remove'>remove</a>				
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	    	</div>
+	    </div>		
+		<a href='javascript://' id="add2">add</a>
+		<a href='javascript://' id="resize2">resize</a>		
+		
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/splitter&steal[env]=development'
                 package='main.js'
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
-			$("#container").phui_splitter()
+			$("#container").phui_splitter();
 			$("#add").click(function(){
 				$("<div class='panel'><a href='javsacript://' class='remove'>remove</a>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
 					.appendTo($("#container")).trigger("insert")
@@ -76,7 +97,22 @@
 					$("#container").height(400).trigger("resize")
 				}
 				big = ! big;
+			});
+			
+			$("#container2").phui_splitter();
+			$("#add2").click(function(){
+				$("<div class='panel'><a href='javsacript://' class='remove'>remove</a>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
+					.appendTo($("#container2")).trigger("insert")
 			})
+			var big2 = true;
+			$("#resize2").click(function(){
+				if(big2){
+					$("#container2").height(600).trigger("resize")
+				}else{
+					$("#container2").height(400).trigger("resize")
+				}
+				big2 = ! big2;
+			});			
 		</script>
 	</body>
 </html>
