Test cases with tables for spliter.

--- a/splitter/splitter.html
+++ b/splitter/splitter.html
@@ -37,6 +37,14 @@
 			#container2 .panel:nth-child(odd) {
 				background-color: #eedddd;
 			}
+			table {
+				border-collapse: collapse;
+			}
+			table td {
+				border-width: 1px;
+				border-style: solid;
+				border-color: #CCCCCC;
+			}
         </style>
 	</head>
 	<body>
@@ -60,9 +68,14 @@
 	    <div id='container2'>
 	    	<div class='panel' style="border:1px solid #CCCCCC;padding:5px;margin:5px;height:80px;">
 	    		<a href='javsacript://' class='remove'>remove</a>
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				<table>
+					<tr><td>Lorem</td><td>ipsum dolor</td><td>sit amet</td></tr>
+					<tr><td>Lorem</td><td>ipsum dolor</td><td>sit amet</td></tr>
+					<tr><td>Lorem</td><td>ipsum dolor</td><td>sit amet</td></tr>
+					<tr><td>Lorem</td><td>ipsum dolor</td><td>sit amet</td></tr>
+					<tr><td>Lorem</td><td>ipsum dolor</td><td>sit amet</td></tr>
+					<tr><td>Lorem</td><td>ipsum dolor</td><td>sit amet</td></tr>
+				</table>
 	    	</div>
 			<div class='panel' style="border:1px solid #CCCCCC;padding:5px;margin:5px;">
 	    		<a href='javsacript://' class='remove'>remove</a>				
