--- a/splitter/splitter.html
+++ b/splitter/splitter.html
@@ -18,6 +18,8 @@
 				background-color: gray;
 				cursor: s-resize;
 				border: solid 1px gray;
+				line-height: 3px;
+				font-size: 0px;
 			}
 			.phui_splitter .split-hover{
 				border: solid 1px blue;
