selectopen runs an example

--- a/menuable/selectopen/selectopen.html
+++ b/menuable/selectopen/selectopen.html
@@ -8,6 +8,9 @@
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
+			.selected a{
+            	background-color: #ddffee;
+            }
         </style>
 	</head>
 	<body>
