adding show and hide default

--- a/menuable/menuable.html
+++ b/menuable/menuable.html
@@ -18,83 +18,66 @@
 		<pre>$("#menu1").phui_menuable()</pre>
         <ul id='menu1'>
             <li><a>Option 1</a>
-                <div>
-                	Here is a subMenu :)
-                </div>
+                <ul>
+                	<li>Here is a subMenu :)</li>
+                </ul>
             </li>
             <li><a>Option 2</a>
-                <div>
-                	Here is a subMenu :)
-                </div>
+                <ul>
+                	<li>Here is a subMenu :)</li>
+                </ul>
             
             </li>
         </ul>
 		<h1>Menuable with focus for select and enter key for active</h1>
 		<ul id='menu2'>
             <li><a tabindex='0' href="javascript://">Option 1</a>
-                <div>
-                	Here is a subMenu :)
-                </div>
+                <ul>
+                	<li>Here is a subMenu :)</li>
+                </ul>
             </li>
             <li><a tabindex='0' href="javascript://">Option 2</a>
-                <div>
-                	Here is a subMenu :)
-                </div>
-            
+                <ul>
+                	<li>Here is a subMenu :)</li>
+                </ul>
             </li>
         </ul>
 		
 		<h1>Submenus</h1>
         <ul id="menu3">
             <li><a>Folder 2</a>
-                <div>
-					<ul class='submenu'>
-                        <li><a>Folder Control</a>
-                        	<div>
-							<ul class='submenu'>
-	                        	<li><a>Another</a></li>
-	                        	<li><a>Exec</a></li>
-	                        	<li><a>Policy</a></li>
-							</ul>
-							</div>
-						</li>
-                        <li><a>Search Policies</a></li>
-                        <li><a>View Policies</a></li>
-					</ul>
-                </div>
+				<ul class='submenu'>
+                    <li><a>Folder Control</a>
+						<ul class='submenu'>
+                        	<li><a>Another</a></li>
+                        	<li><a>Exec</a></li>
+                        	<li><a>Policy</a></li>
+						</ul>
+					</li>
+                    <li><a>Search Policies</a></li>
+                    <li><a>View Policies</a></li>
+				</ul>
 			</li>
 			<li><a>Google</a>
-                <div>
-					<ul class='submenu'>
-                        <li><a>Risk</a></li>
-                        <li><a>Enterprise</a></li>
-                        <li><a>Incident</a></li>
-					</ul>
-                </div>
+				<ul class='submenu'>
+                    <li><a>Risk</a></li>
+                    <li><a>Enterprise</a></li>
+                    <li><a>Incident</a></li>
+				</ul>
 			</li>
         </ul>
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/menuable&steal[env]=development'>   
         </script>
 		<script type='text/javascript'>
-			$("#menu1").phui_menuable().find("div").hide()
-			  .bind("show", function(){
-				$(this).fadeIn(function(){
-					$(this).trigger("show:after")
-				});
-			})
-			.bind("hide", function(){
-				$(this).fadeOut(function(){
-					$(this).trigger("hide:after")
-				});
-			});
+			$("#menu1").phui_menuable().find("ul").hide()
         	$("#menu1").find("li").click(function(){
 				$(this).trigger("activate")
 			});
 			
 			
 			//menu with focus
-			$("#menu2").phui_menuable().find("div").hide()
+			$("#menu2").phui_menuable().find("ul").hide()
 			  .bind("show", function(){
 				$(this).fadeIn(function(){
 					$(this).trigger("show:after")
@@ -113,18 +96,7 @@
 					$(this).trigger("activate")
 			});
 			
-			$("#menu3").phui_menuable().find("div").hide()
-			  .bind("show", function(ev){
-				ev.stopPropagation();
-			  	$(this).show();
-				$(this).trigger("show:after")
-
-			})
-			.bind("hide", function(ev){
-				ev.stopPropagation();
-			  	$(this).hide();
-				$(this).trigger("hide:after")
-			});
+			$("#menu3").phui_menuable().find("ul").hide()
 			$('#menu3').find("li").click(function(ev, el){
 				ev.stopPropagation();
 				$(this).trigger("activate")
