--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -35,8 +35,8 @@
 	<body>
 		<h1>Tabs Demo</h1>
 		<h2>Basic Tab</h2>
-	    <div id="tabs">
-		    <ul>
+
+		    <ul id="tabs">
 		        <li><a href="#fragment-1"><span>One</span></a></li>
 		        <li><a href="#fragment-2"><span>Two</span></a></li>
 		        <li><a href="#fragment-3"><span>Three</span></a></li>
@@ -54,15 +54,16 @@
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		    </div>
-		</div>		
+	
 		
 		<h2>UI Tab</h2>
-		<div id="uitabs">
-		    <ul>
-		        <li><a><span>One</span></a></li>
-		        <li><a><span>Two</span></a></li>
-		        <li><a><span>Three</span></a></li>
-		    </ul>
+			<div>
+			    <ul id="uitabs">
+			        <li><a><span>One</span></a></li>
+			        <li><a><span>Two</span></a></li>
+			        <li><a><span>Three</span></a></li>
+			    </ul>
+			</div>
 		    <div>
 		        <p>First tab is active by default:</p>
 		        <pre><code>$('#example').tabs();</code></pre>
@@ -84,7 +85,7 @@
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
-			$("#tabs").phui_tabs()
+			$("#tabs ul").phui_tabs()
 			$("#uitabs").phui_ui_tabs()
 		</script>
 	</body>
