--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -9,10 +9,10 @@
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
-			#tabs {
+			.tabarea {
 				border: solid 1px;
 			}
-			#tabs ul li{
+			#tabs li{
 				float: left;
 				padding: 10px;
 				list-style: none;
@@ -20,7 +20,7 @@
 				background-color: black;
 				color: white;
 			}
-			#tabs ul {
+			#tabs {
 				height: 40px;
 				border-bottom: solid 1px gray;
 				padding: 0px;
@@ -35,7 +35,7 @@
 	<body>
 		<h1>Tabs Demo</h1>
 		<h2>Basic Tab</h2>
-
+		<div class='tabarea'>
 		    <ul id="tabs">
 		        <li><a href="#fragment-1"><span>One</span></a></li>
 		        <li><a href="#fragment-2"><span>Two</span></a></li>
@@ -54,7 +54,7 @@
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		    </div>
-	
+		</div>
 		
 		<h2>UI Tab</h2>
 			<div>
@@ -85,8 +85,13 @@
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
-			$("#tabs ul").phui_tabs()
-			$("#uitabs").phui_ui_tabs()
+			$("#tabs").phui_tabs().find("li").click(function(ev){
+				ev.preventDefault();
+				ev.stopPropagation();
+				$(this).trigger("activate")
+			});
+			
+			//$("#uitabs").phui_ui_tabs()
 		</script>
 	</body>
 </html>
